<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/txtNomeAluno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtNomeAluno"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/txtNota1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtNota1"
        android:inputType="numberDecimal"
         />

    <EditText
        android:id="@+id/txtNota2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtNota2"
        android:inputType="numberDecimal"
        />

    <EditText
        android:id="@+id/txtNota3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtNota3"
        android:inputType="numberDecimal"
         />

    <Button
        android:id="@+id/btnAddAluno"
        android:onClick="adicionarAluno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Adicionar" />

    <ListView
        android:id="@+id/listViewAluno"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>